all prelim pages are sent to another proof

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 \noindent
-{\rm SHIVAPADA RATNAKOSHA}\\[5pt]
+{\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[5pt]
 {\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)}\\[4pt]
 {\rm Prepared by Editorial Committe}\\[4pt]
 {\rm Published by JSS Granthamale, Mysuru.}
@@ -27,7 +27,7 @@
 \vfill
 
 \noindent
-{\large shivapada ratanxkoVsha}\\[5pt]
+{\bf\large shivapada ratanxkoVsha}\\[5pt]
 (viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha)\\[5pt]
 saMpAdane : saMpAdaka samiti\\[4pt]
 parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru\\
