--- a/nivedane.tex
+++ b/nivedane.tex
@@ -107,7 +107,7 @@ BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNey
 {\large\bf muKayx ulelxVKa}
 \end{center}
 
-I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda.}
+I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege:}
 
 \begin{entry}
 \word{nAda}\label{nAda}
@@ -161,7 +161,7 @@ oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLan
 
 \medskip
 
-saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf uhAharaNege : Eka\-BAjanasathxla.} 
+saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf uhAharaNege:} 
 
 \begin{entry}
 \word{EkaBAjanasathxla}\label{EkaBAjanasathxla}
@@ -173,11 +173,11 @@ matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parx
 Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}}
 \medskip
 \begin{shl}
-aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |\\[1pt]
+aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |\\[3pt]
 aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||\\[3pt]
-vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |\\[1pt]
+vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |\\[3pt]
 shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||\\[3pt]
-savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |\\[1pt]
+savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |\\[3pt]
 EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||\\[-2pt]
 \end{shl}
 \pauthor{(si.shi., 14. 3, 28-29)}
@@ -191,7 +191,7 @@ EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||\\[-2pt]
 
 padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda athaRvanunx heVLi AmeVle pAriBASika athaRvanunx koDalAgide. kelavu kaDe parxyoVgagaLu doreyade idadxrU avu pAriBASika athaRgaLanunx koDuvaMtitxdadxre avu\-gaLanUnx seVrilAgide. pAriBASika padagaLa athaR sapxSaTxvAguvaMte saMkiSxpatxvAgi vivaraNe niVDi, adeV athaR baruva beVre padagaLanunx payARyavAgi koDalAgide. oMdakikxMta hecucx athaRgaLidadxre 1,2,3 hiVge saMKeyxgaLanunx koTuTx vividha athaRgaLanunx niVDalAgide. udAharaNege: aMga: 1. oDalu, deVha 2. deVhada oMdu BAga; avayava; 3. tavxkukx athavA camaR 4. Atamx 5. shudadhxjiVvAtamx hiVge `aMga' padakekx iruva oTuTx 20 vividha athaRgaLanunx niVDalAgide. muKayx shabadxgaLige irabahudAda sAdaqshayxgaLanunx itara shabadxgaLoMdige ``parAmashiRsi(parA)'', ``visheVSa'', ``noVDi'' eMba sUcanegaLa mUlaka gamana seLeyalAgide. udAharaNege : \textbf{``aMkurashiVla'' (parA: sadAcAra) /aMgavideyx parA- aMga} itAyxdi. aMteyeV shabadxda oMdu athaR adara jAcnxtishabadxda athavA beVroMdu shabadxda athaRkekx samAnavAgidadxre A eraDaneya shabadxda athaRvanunx matetx ulelxVKisade samAnAthaRka cihenx (=) hAki sUcisalAgide. udAharaNege: \textbf{aMgaleVpasathxLa=aMgaleVpanasathxLa} matutx \textbf{aMgaliMgasaMga=aMgaliMgasaMbaMdha} itAyxdi.
 
-\vspace{1cm}
+\newpage
 
 \begin{center}
 {\large\bf leVKana cihenxgaLu}
@@ -200,7 +200,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 {\bf pUNaR virAma (.)}
 \end{center}
 \begin{itemize}
-\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege: nAdacakarx.}
+\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege:}
 
 \begin{entry}
 \word{nAdacakarx}\label{nAdacakarx}
@@ -266,8 +266,6 @@ athaRgaLanunx niVDuvAga adaroLage matotxMdu pAriBASika pada udadhxqqtavAdare oMd
 \item niSapxtitx BAgagaLu kaMsada oLage ive. udAharaNege : \textbf{(aMgasayx vikAraH- aMgavikAraH)}
 \end{enumerate}
 
-\medskip
-
 \begin{center}
 {\bf aDaDxgere (-)}
 \end{center}
@@ -276,16 +274,12 @@ athaRgaLanunx niVDuvAga adaroLage matotxMdu pAriBASika pada udadhxqqtavAdare oMd
 \item niSapxtitxyanunx sUcisuvAga niSapxtitxyiMda niSapxnanxvAda muKayxpadada hiMde I cihenxyanunx baLasalAgide. udAharaNege : \textbf{(aMgasayx vikAraH- aMgavikAraH)}
 \end{enumerate}
 
-\medskip
-
 \begin{center}
 {\bf samAnAthaRka cihenx (=)}
 \end{center}
 \begin{enumerate}
 \item muKayx ulelxVKavanunx vivarisuva vivaraNeyu matotxMdu ulelxVKadalilx vivaravAgi baMdidadxre A padakekx I cihenxyanunx baLasalAgide. \textbf{udAharaNe: aMgaleVpasathxla = aMgaleVpanasathxla}. ililx aMgaleVpana sathxladalilx adara vicAragaLu vivaravAgi aBivayxkatxgoMDive. aveV vivaragaLanUnx aMgaleVpasathxlakUkx anavxyisikoLaLxbeVku. avugaLanunx matetx niVDuvudariMda punarAvataRneyAgutatxde. AdudariMda I cihenxyanunx baLasi adara vivaragaLiruva padavanunx sUcisalAgide.
 \end{enumerate}
-
-\medskip
 
 \begin{center}
 {\bf cwka kaMsa [ \ ]}
@@ -304,6 +298,10 @@ athaRgaLanunx niVDuvAga adaroLage matotxMdu pAriBASika pada udadhxqqtavAdare oMd
 \item padakoVshada muKayx ulelxVKada shabadxgaLige I aLateya akaSxragaLanunx baLasalAgide.
 \item oMdu muKayx padakekx, ininxtara athaRCAye idAdxga A padagaLanunx sUcisalu I aLateya akaSxragaLanunx baLasalAgide.
 \end{enumerate}
+
+\eject
+
+\noindent
 {\bf 12 pAyiMTf dapapx akaSxra :} muKayx ulelxVKada shabadxda athaRgaLige dapapxkaSxragaLalilx I aLateya akaSxravanunx baLasalAgide.
 
 \medskip
