another modified prelims pages are sent to proof

--- a/nivedane.tex
+++ b/nivedane.tex
@@ -107,48 +107,37 @@ BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNey
 {\large\bf muKayx ulelxVKa}
 \end{center}
 
-I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege:}
+I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqti rUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva pada samucaCxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqti rUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda: 1. shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}
+\begin{quote}
+{\sl biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |}\\[3pt]
+{\sl biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||}\\[3pt]
+{\sl nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |}\\[3pt]
+{\sl jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||}\hfill (caM.A., kirx.pA., 3. 13-14, 17)
+\end{quote}
 
-\begin{entry}
-\word{nAda}\label{nAda}
-\meaning{\artha{shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}}
+\noindent
+\textbf{2. nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:}
+\begin{quote}
+{\sl nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |}\hfill {(sU.A., kirx.pA., 6.3)}
+\end{quote}
+\begin{quote}
+{\sl biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |}\\[2pt]
+{\sl shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |}\hfill {(shi.ta.ra., BA-1, 1.4.25)}
+\end{quote}
+\begin{quote}
+{\sl nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH}\\[2pt]
+{\sl kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA}\hfill {(shivasU. 29-68)}
+\end{quote}
+
 \medskip
-\begin{shl}
-biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |\\[2pt]
-biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||\\[2pt]
-nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |\\[2pt]
-jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||\\[-2pt]
-\end{shl}
-\pauthor{(caM.A., kirx.pA., 3. 13-14, 17)}
+\noindent
+nAda munanxvo biMdu munanxvo? kAya munanxvo jiVva \hbox{munanxvo}? (savasaM. 2; alalxma. 659-178); nAdadoLagaNa cinAnxdava toVrisayayx, biMduvoLagaNa cidibxMduva toVrisayayx. kaleyoLagaNa citakxleya toVrisayayx (savasaM. 10; jakakxNa. 1542-641); hadinAru kaLeya parxBeya musukida nAdavanunx nAdadi biMdu kaLeyanoMdumADi ninAda\-BASayxviDiduda parxshiKA eMdene (hirimaM. 687-17). \textbf{3. dhavxni; shabadx:}
+I parxNavaMgaLa nAdaMgaLAvAveMdaDe: peNudxMbi\-nAda, veVNunAda, GaMTAnAda ...divayxnAda I nAdaM\-gaLu. I nAdaMgaLige piMDaMgaLAvAveMdaDe BakatxneMba piMDa ...cinUmxtiR\-yeMba piMDa (savasaM. 3; cenanxba. 1268-441); Barxmara, veVNu, GaMTA, BeVri, meVGa, parxNama, divayx, siMha, mahatf ivu nAda\-gaLu, ywgika cihenx\-gaLu (shivAkoV. 142-342). \textbf{4. barxhamx\-savxrUpavAda dhavxnivisheVSa:}
+mU{\ru} te{\ra}nAgi kaLe nAda varabiMdu\-veMdu BeVdisidAdideVshikana caraNAMbujakekx \hbox{sharaNu} (shivaciM. 50-19). \textbf{5. `namaHshivAya' eMba pavitarxmaMtarxda paThaNa; shivamaMtarxda japa:} Adi akaSxravanu AreYdu toVridiri OraMte enanx saduhaqdayanenisi nAdakaLegaLanenanx AdikaradoLagiTuTx (savasaM. 4; \hbox{sidadhxrA}. 157-46). \textbf{6. parashiva:} nAdapirxya shiva\-neMbaru, nAdapirxya shivanalalxyAyx (savasaM. 1; basava. 181-46);\break nAdaveV liMga biMduveV piVThanAgi shivashakitxsaMpuTavAda \hbox{paMcamada} kameRVsha liMganivaRyala piMDa aMgaveMba piMDa tadUrxpa\-vaneyidx paripUNaR piMDAkAsharUpa tAnAgi (savasaM. 8; moVLige. 987-307); nAdaveV liMga guru satapxrXNava\-rUpalA (viVsheYpu. 1-6-37);
+
 \medskip
-\newmeaning{\artha{nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:}}
-\medskip
-\begin{shl}
-nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |
-\end{shl}
-\pauthor{(sU.A., kirx.pA., 6.3)}
-\medskip
-\begin{shl}
-biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |\\[2pt]
-shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |\\[-2pt]
-\end{shl}
-\pauthor{(shi.ta.ra., BA-1, 1.4.25)}
-\medskip
-\begin{shl}
-nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH\\[2pt]
-kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA\\[-2pt]
-\end{shl}
-\pauthor{(shivasU. 29-68)}
-\smallskip
-\newmeaning{\ullekha{nAda munanxvo biMdu munanxvo? kAya munanxvo jiVva \hbox{munanxvo}? (savasaM. 2; alalxma. 659-178); nAdadoLagaNa cinAnxdava toVrisayayx, biMduvoLagaNa cidibxMduva toVrisayayx. kaleyoLagaNa citakxleya toVrisayayx (savasaM. 10; jakakxNa. 1542-641); hadinAru kaLeya parxBeya musukida nAdavanunx nAdadi biMdu kaLeyanoMdumADi ninAda\-BASayxviDiduda parxshiKA eMdene (hirimaM. 687-17).}
-\artha{dhavxni; shabadx:}
-\ullekha{I parxNavaMgaLa nAdaMgaLAvAveMdaDe: peNudxMbi\-nAda, veVNunAda, GaMTAnAda ...divayxnAda I nAdaM\-gaLu. I nAdaMgaLige piMDaMgaLAvAveMdaDe BakatxneMba piMDa ...cinUmxtiR\-yeMba piMDa (savasaM. 3; cenanxba. 1268-441); Barxmara, veVNu, GaMTA, BeVri, meVGa, parxNama, divayx, siMha, mahatf ivu nAda\-gaLu, ywgika cihenx\-gaLu (shivAkoV. 142-342).} \artha{barxhamx\-savxrUpavAda dhavxnivisheVSa:}
-\ullekha{mU{\ru} te{\ra}nAgi kaLe nAda varabiMdu\-veMdu BeVdisidAdideVshikana caraNAMbujakekx \hbox{sharaNu} (shivaciM. 50-19).} \artha{`namaHshivAya' eMba pavitarxmaMtarxda paThaNa; shivamaMtarxda japa:}
-\ullekha{Adi akaSxravanu AreYdu toVridiri OraMte enanx saduhaqdayanenisi nAdakaLegaLanenanx AdikaradoLagiTuTx (savasaM. 4; \hbox{sidadhxrA}. 157-46).} \artha{parashiva:}
-\ullekha{nAdapirxya shiva\-neMbaru, nAdapirxya shivanalalxyAyx (savasaM. 1; basava. 181-46);\break nAdaveV liMga biMduveV piVThanAgi shivashakitxsaMpuTavAda \hbox{paMcamada} kameRVsha liMganivaRyala piMDa aMgaveMba piMDa tadUrxpavaneyidx paripUNaR piMDAkAsharUpa tAnAgi (savasaM. 8; moVLige. 987-307); nAdaveV liMga guru satapxrXNava\-rUpalA (viVsheYpu. 1-6-37);}}
-\vskip 5pt
-\newmeaning{\ni{nadf+Gacnx, nadati iti - nAdaH}}
-\end{entry}
+\noindent
+(nadf+Gacnx, nadati iti - nAdaH)
 
 \newpage
 
@@ -161,33 +150,24 @@ oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLan
 
 \medskip
 
-saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf uhAharaNege:} 
+saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana saMpuTada eSaTxneya saMpuTa hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxyanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf udAharaNege: Eka\-BAjanasathxla: aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu; shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}
+\begin{quote}
+{\sl aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |}\\[3pt]
+{\sl aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||}\\[3pt]
+{\sl vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |}\\[3pt]
+{\sl shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||}\\[3pt]
+{\sl savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |}\\[3pt]
+{\sl EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||}\hfill (si.shi., 14. 3, 28-29)
+\end{quote}
 
-\begin{entry}
-\word{EkaBAjanasathxla}\label{EkaBAjanasathxla}
-\meaning{\arthanonum{aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu;
-shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu
-BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV
-EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx
-matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV
-Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}}
-\medskip
-\begin{shl}
-aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |\\[3pt]
-aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||\\[3pt]
-vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |\\[3pt]
-shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||\\[3pt]
-savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |\\[3pt]
-EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||\\[-2pt]
-\end{shl}
-\pauthor{(si.shi., 14. 3, 28-29)}
-\smallskip
-\newmeaning{\ullekha{EkaBAjanasathxla, sahajaBoVjanasathxla eMba eMTu sathxlaM\-gaLanunx sheVSAMgasavxrUpavAda sharaNa paripUNaR jAcnxnAnuBavadalilx kaMDu (savasaM. 14; SaNumxKa. 336-200); adhikaliMgeY\-kayxMge BoVjanavadaMtA mahAliMgavadakeYkayxneV BAjanaM divxnAmaMgaLa\-Dagi muMteVkavA liMgadoLageraDanuLivutoVraMte savARMgamaM liMgadoLagaM berasidaMtapapxvaMgeVkaBAjanasathxlaM (viVsheYpu. 8-125-60); savARMga\-liVna savARcArasaMpananx\-vAda liMgeYkayxMge mahAliMgave BAjanavAmahAliMgakAkx mahAliMgeYkayxne BAjanavAgi eraDilalxdipuRdeMtidiR\-tetxMdoDe muMdeVkaBAjanasathxlavAdudu (keYvasha. 75-1 sUtarx).}}
-\vskip 5pt
-\newmeaning{\ni{EkaBAjanaM iti sathxlaM - EkaBAjanasathxlaM}}
-\end{entry}
+\noindent
+EkaBAjanasathxla, sahajaBoVjanasathxla eMba eMTu sathxlaM\-gaLanunx sheVSAMgasavxrUpavAda sharaNa paripUNaR jAcnxnAnuBavadalilx kaMDu (savasaM. 14; SaNumxKa. 336-200); adhikaliMgeY\-kayxMge BoVjanavadaMtA mahAliMgavadakeYkayxneV BAjanaM divxnAmaMgaLa\-Dagi muMteVkavA liMgadoLageraDanuLivutoVraMte savARMgamaM liMgadoLagaM berasidaMtapapxvaMgeVkaBAjanasathxlaM (viVsheYpu. 8-125-60); savARMga\-liVna savARcArasaMpananx\-vAda liMgeYkayxMge mahAliMgave BAjanavAmahAliMgakAkx mahAliMgeYkayxne BAjanavAgi eraDilalxdipuRdeMtidiR\-tetxMdoDe muMdeVkaBAjanasathxlavAdudu (keYvasha. 75-1 sUtarx).
 
 \medskip
+\noindent
+(EkaBAjanaM iti sathxlaM - EkaBAjanasathxlaM)
+
+\bigskip
 
 padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda athaRvanunx heVLi AmeVle pAriBASika athaRvanunx koDalAgide. kelavu kaDe parxyoVgagaLu doreyade idadxrU avu pAriBASika athaRgaLanunx koDuvaMtitxdadxre avu\-gaLanUnx seVrilAgide. pAriBASika padagaLa athaR sapxSaTxvAguvaMte saMkiSxpatxvAgi vivaraNe niVDi, adeV athaR baruva beVre padagaLanunx payARyavAgi koDalAgide. oMdakikxMta hecucx athaRgaLidadxre 1,2,3 hiVge saMKeyxgaLanunx koTuTx vividha athaRgaLanunx niVDalAgide. udAharaNege: aMga: 1. oDalu, deVha 2. deVhada oMdu BAga; avayava; 3. tavxkukx athavA camaR 4. Atamx 5. shudadhxjiVvAtamx hiVge `aMga' padakekx iruva oTuTx 20 vividha athaRgaLanunx niVDalAgide. muKayx shabadxgaLige irabahudAda sAdaqshayxgaLanunx itara shabadxgaLoMdige ``parAmashiRsi(parA)'', ``visheVSa'', ``noVDi'' eMba sUcanegaLa mUlaka gamana seLeyalAgide. udAharaNege : \textbf{``aMkurashiVla'' (parA: sadAcAra) /aMgavideyx parA- aMga} itAyxdi. aMteyeV shabadxda oMdu athaR adara jAcnxtishabadxda athavA beVroMdu shabadxda athaRkekx samAnavAgidadxre A eraDaneya shabadxda athaRvanunx matetx ulelxVKisade samAnAthaRka cihenx (=) hAki sUcisalAgide. udAharaNege: \textbf{aMgaleVpasathxLa=aMgaleVpanasathxLa} matutx \textbf{aMgaliMgasaMga=aMgaliMgasaMbaMdha} itAyxdi.
 
@@ -200,15 +180,11 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 {\bf pUNaR virAma (.)}
 \end{center}
 \begin{itemize}
-\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege:}
+\item muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDalAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege: nAdacakarx: (va). cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX:} kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nelavilalx (savasaM. 3; cenanxba. 1151-397).
 
-\begin{entry}
-\word{nAdacakarx}\label{nAdacakarx}
-\src{va}
-\meaning{\arthanonum{cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX:}
-\ullekha{kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nelavilalx (savasaM. 3; cenanxba. 1151-397).}}
-\newmeaning{\ni{nAdasayx cakarxM - nAdacakarxM}}
-\end{entry}
+\smallskip
+\noindent
+(nAdasayx cakarxM - nAdacakarxM)
 \end{itemize}
 
 \medskip
@@ -228,15 +204,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \begin{enumerate}
 \item parxyoVgavanunx koDuvAga adara Akaravanunx tiLisuvAga kaMsada oLage adaralUlx vacanagaLa saMpuTavanunx tiLisuvAga AyA saMpuTagaLa saMKeyxya naMtara I cihenxyanunx baLasalAgide.
 
-\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. \textbf{uhAharaNege : aMgatarxya}
-
-\begin{entry}
-\word{aMgatarxya}\label{aMgatarxya}
-\src{va}
-\meaning{\artha{tAyxgAMga, BoVgAMga matutx yoVgAMga eMba mUru shariVragaLu. ivugaLu karxmavAgi sUthxla (deVha), sUkaSxmX (pArxNa), kAraNa (Atamx) shariVragaLenisive.}
-\artha{ivugaLu karxmavAgi sUthxla, sUkaSxmX matutx kAraNa eMba mUru shariVragaLu.}
-\artha{shudadhx, nimARya, nimaRla eMba mUru aMgagaLu (deV.saM.ba., va. 1196).}}
-\end{entry}
+\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. \textbf{uhAharaNege : aMgatarxya: (va). 1. tAyxgAMga, BoVgAMga matutx yoVgAMga eMba mUru shariVragaLu. ivugaLu karxmavAgi sUthxla (deVha), sUkaSxmX (pArxNa), kAraNa (Atamx) shariVragaLenisive. 2. ivugaLu karxmavAgi sUthxla, sUkaSxmX matutx kAraNa eMba mUru shariVragaLu. 3. shudadhx, nimARya, nimaRla eMba mUru aMgagaLu (deV.saM.ba., va. 1196).}
 \end{enumerate}
 
 \medskip
@@ -245,7 +213,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 {\bf vivaraNa virAma (:)}
 \end{center}
 
-parxdhAna ulelxVKada naMtara hAgU shabadxkekx athaRvanunx koDuva modalu hAgU parxyoVgagaLanunx niVDuva modalu vivaraNa virAmavanunx upayoVgisalAgide. \textbf{udAharaNege: aMgaBavi:(va). shivadiVkASx saMsAkxravilalxdavanu; liMgAMga sAmarasayxvilalxdavana deVha:}
+parxdhAna ulelxVKada naMtara hAgU shabadxkekx athaRvanunx koDuva modalu hAgU parxyoVgagaLanunx niVDuva modalu vivaraNa virAmavanunx upayoVgisalAgide. \textbf{udAharaNege: aMgaBavi: (va). shivadiVkASx saMsAkxravilalxdavanu; liMgAMga sAmarasayxvilalxdavana deVha:}
 
 \newpage
 
