work in progress

--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -1,5 +1,29 @@
 \begin{center}
-{\Huge\bfseries shuBa saMdeVsha}
+{\Huge\bfseries shuBa hAreYke}
 \end{center}
 
 \thispagestyle{empty}
+
+\bigskip
+
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata paMthagaLive. avugaLa naDuve aneVka BinanxtegaLive. sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililx bahu mata-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAnada rUpugoMDide. BArata sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx jana jiVvanada oMdu BAga. dhamaR janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka muMtAda saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretu hoVgide. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+
+\medskip
+
+parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka sAmAjika nuDigaTuTxgaLanunx saqSiTxsi koMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya sadAshaya kalapxne irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu baruvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx, tiLiyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvAda matutx upayukatxvAda garxMtha eMbudaralilx saMshayavilalx. BAratadalilx iruva mata-dhamaRgaLa hinanxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva parxgatipara dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita catuvaNaRgaLu anaMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. cAtuvaNaRvanunx biTuTx uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyx mAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRvanunx unanxtiVkarisi \textbf{ativaNARsharxma} eMba vishiSaTx parikalapxneyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa, eMba ciMtane beLedu baMdavu. iMtha aneVka veYshiSaTxpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+
+\medskip
+
+pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx taruva yoVjane idAgitutx. anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx paDedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe sUcanegaLanunx niVDidAdxre.
+
+\medskip
+
+hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcalashAsitxrX,     DA. enf.esf. tAranAtha, DA. go.ru. cananxbasapapx, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavarAdhayx, porx. esf. naMjuMDayayx shirxV Arf.esf. pUNARnaMda DA. naMdiVshf haMce avarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
+
+\medskip
+
+DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiyanunx sidadhxte- hiVge niGaMTu racaneya elalx haMtagaLanunx kaThiNa parisharxma hAkidAdxre. idoMdu sharxmadAyaka kelasavAdarU pirxVti, sharxdedxyiMda mADidAdxre. I garxMtha elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
+
+\medskip
+
+I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivarAda hAgU iMdina upamuKayxmaMtirxgaLAda shirxV goVviMda kArajoVLa avarige oLitanunx hAreYsutetxVne.
