--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -46,21 +46,21 @@
 {\bf 25. kU.pu.} & kUmaR purANamf &-& & \\
 {\bf 26. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banAsaridAsf\newline dehali, 1980\\
 {\bf 27. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru\newline 1951\\
-{\bf 28. keY.sA.} & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
+{\bf 28. keY.sA.} & keYvalayxsAraH\newline (virakatxtoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
 {\bf 29. kirx.sA.} & \hbox{kirxyAsAraH(niVlakaMTha shivAcAyaR)}\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1954\newline 1957, 1958\\
-{\bf 30. gw.kA.} & gwDapAdakArikA &-& & \\
+{\bf 30. gw.kA.} & gwDapAdakArikA\newline (mAMDUkoyxVpaniSatf BASayx) &-& sAvxmi cinamxyAnaMda & cinamxya parxkAshana\\
 %26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
 {\bf 31. caM.A.} & caMdarxjAcnxnAgamaH\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM.) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2002\\
 {\bf 32. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1995\\
 {\bf 33. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
 {\bf 35. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2010\\
-{\bf 36. ta.parxdiV.} & tatatxvXparxdiVpikA &-& & \\
+{\bf 36. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf. pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
 {\bf 37. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 38. teY.A.} & teYtitxriVyAraNayxkamf &-& & \\
+{\bf 38. teY.A.} & teYtitxriVyAraNayxkamf &-& AnaMdAsharxma siVriVsf & puNe\\
 {\bf 39. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1993\\
 {\bf 40. da.u.} & dakiSxNAmUtuyxRpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 41. dAvx.shi.kirx.} & dAvxdashashivaliMgAjaRnakirxyA &-& & \\
+{\bf 41. dAvx.shi.kirx.} & dAvxdashashivaliMgAcaRnakirxyA &-& & \\
 {\bf 42. diVkASx.parx.} & diVkASxparxkaraNamf &-& & \\
 {\bf 43. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi\newline 2000\\
 {\bf 44. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
@@ -80,19 +80,19 @@
 {\bf 58. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 59. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 60. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 61. barx.pu.} & barxhAmxMDapurANamf &-& & \\
-{\bf 62. barxsU.} & barxhamxsUtarxmf &-& & \\
+{\bf 61. barx.pu.} & barxhAmxMDapurANamf &-& moVtilAla banArasidAsf pabilxSasfR & navadehali, 1983\\
+{\bf 62. barxsU.} & barxhamxsUtarxmf\newline (shirxVkaraBASayxmf) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1, 1977, BAga-2, 1978\\
 {\bf 63. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf\newline 2008\\
-{\bf 64. Ba.jA.u.} & BasamxjAbAloVpaniSatf &-& & \\
+{\bf 64. Ba.jA.u.} & BasamxjAbAloVpaniSatf &-& {\rm The Shaiva Upanishads} & {\rm Adyar Library and Research Centre, Madras, 1988}\\
 {\bf 65. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayxmf &-& DA. Ti.ji. sidadhxpApxrAdhayx & baqhanamxTha\newline citarxdugaR, 1935\\
 {\bf 66. BA.pari.} & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka\newline shabAdxvaliV AyoVga & BArata sakARra\newline navadehali, 1999\\
 {\bf 67. makuTa.} & makuTAgamaH\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1998\\
 {\bf 68. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra: shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula\newline kAshiV, 1959\\
-{\bf 69. ma.BA.} & mahABAratamf &-& & \\
+{\bf 69. ma.BA.} & mahABAratamf &-& giVtA perxsf & goVraKapura, visam. 2044\\
 {\bf 70. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa\newline dehali, 1980\\
 {\bf 71. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1984\\
-{\bf 72. mAM.kA.} & mAMDUkayxkArikA &-& & \\
-{\bf 73. mAM.saM.} & mAdhayxMdina saMhitA &-& & \\
+{\bf 72. mAM.kA.} & mAMDUkayxkArikA &-& (saM) hari raGunAtha BAgavatf & aSeTxVkarf aMDf koV. puNe, 191\\
+{\bf 73. mAM.saM.} & mAdhayxMdina saMhitA &-& (saM) & \\
 {\bf 74. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1957\\
 {\bf 75. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
 {\bf 76. meYterxVya.} & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
